# Legal-AI-assistant-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.txt  _tmp_contract_test.docx  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_redis.sh  start_server.sh  start_worker.sh
src/: server.py
src/models/: index.py
src/rag/: chunk_content.py  legal_citation.py
src/rag/compare/: document_parser.py  subquestion_engine.py
src/rag/compare/v3/: nodes.py  retrieval.py  state.py  tracing.py  workflow.py
src/rag/ingestion/: index.py  utils.py
src/rag/retrieval/: corrective.py  index.py  utils.py
src/routes/: caseLawRoutes.py  chatRoutes.py  compareRoutes.py  compareV2Routes.py  compareV3Routes.py  contractRoutes.py  filesRoutes.py  settingsRoutes.py  userRoutes.py
src/services/: caseLawCrawlJobStore.py  caseLawCrawlerService.py  caseLawSearchService.py  celery.py  chatService.py  clerkAuth.py  compareDocumentRetrievalService.py  compareDocumentService.py  compareService.py  compareServiceV2.py  compareServiceV3.py  compareStreamService.py  contractDocumentService.py  contractDraftService.py  llm.py  webScrapper.py
src/utils/: content_disposition.py  markdown_docx.py  sse.py
supabase/: config.toml
supabase/migrations/: 20250613120000_chat_settings.sql  20250613130000_chat_model_setting.sql  20250613140000_compare_documents_scope.sql  20250613150000_contract_documents_scope.sql  20250710120000_case_laws.sql  20251116124656_initial_schema.sql
