[project]
name = "legal-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.43.29",
    "celery[redis]>=5.6.3",
    "clerk-backend-api>=6.0.1",
    "fastapi>=0.136.3",
    "langchain-openai>=1.3.1",
    "python-dotenv>=1.2.2",
    "scrapingbee>=2.0.0",
    "supabase>=2.31.0",
    "unstructured>=0.18.32",
    "pdfminer.six>=20221105",
    "pypdf>=4.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "uvicorn[standard]>=0.34.0",
    "pi-heif>=1.4.0",
    "pikepdf>=10.8.0",
    "pdf2image>=1.17.0",
    "unstructured-inference>=1.1.1",
    "onnxruntime>=1.19.0,<1.20",
    "markdown>=3.10.2",
    "unstructured-pytesseract>=0.3.15",
    "llama-index-core>=0.12.0",
    "llama-index-llms-openai>=0.3.0",
    "llama-index-embeddings-openai>=0.3.0",
    "langgraph>=1.2.7",
    "langsmith>=0.8.0",
]
